--- a/package.json
+++ b/package.json
@@ -14,10 +14,17 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.27.4",
 		"@types/cookie": "^0.5.1",
+		"autoprefixer": "^10.4.16",
+		"postcss": "^8.4.32",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"tailwindcss": "^3.3.6",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"bcrypt": "^5.1.1",
+		"mongodb": "^6.3.0"
+	}
 }
