--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"postcss": "^8.4.32",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
+		"svelte-sidebar-menu": "^0.9.12",
 		"tailwindcss": "^3.3.6",
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
@@ -25,6 +26,11 @@
 	"type": "module",
 	"dependencies": {
 		"bcrypt": "^5.1.1",
-		"mongodb": "^6.3.0"
+		"boxicons": "^2.1.4",
+		"flowbite-svelte": "^0.44.20",
+		"flowbite-svelte-icons": "^0.4.5",
+		"mongodb": "^6.3.0",
+		"sass": "^1.69.5",
+		"svrollbar": "^0.12.0"
 	}
 }
