--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"flowbite-svelte-icons": "^0.4.5",
 		"mongodb": "^6.3.0",
 		"sass": "^1.69.5",
-		"svrollbar": "^0.12.0"
+		"svrollbar": "^0.12.0",
+		"to-words": "^3.7.0"
 	}
 }
